--- a/asst.ipynb
+++ b/asst.ipynb
@@ -208,6 +208,7 @@
     "    \n",
     "    now = datetime.now()\n",
     "    visitor = []\n",
+    "    curdate= now.strftime(\"%d/%m/%Y\")\n",
     "    timenow = now.strftime('%H:%M:%S')\n",
     "    visitor = df.query('Name == @vname and ExitTime==\"inside\"')\n",
     "    entrytime= visitor['EntryTime']\n",
@@ -215,7 +216,7 @@
     "    if visitor.empty:\n",
     "        \n",
     "        names_list = list(df['Name'])\n",
-    "        df.loc[len(df)] = [vname, timenow, temp, 'inside', 'none']\n",
+    "        df.loc[len(df)] = [vname, curdate, timenow, temp, 'inside', 'none']\n",
     "        print('Welcome')\n",
     "        if name in names_list:\n",
     "            visitor = df.query('Name ==@name')\n",
