--- a/asst.ipynb
+++ b/asst.ipynb
@@ -668,7 +668,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def idscanner(frame):\n",
+    "    #1\n",
+    "    # camera = cv2.VideoCapture(0)\n",
+    "    # ret, frame1 = camera.read()\n",
+    "    qrname = \"\"\n",
+    "    cur_direc = os.getcwd()\n",
+    "    path = os.path.join(cur_direc, 'dataset/faces/')\n",
+    "    #2\n",
+    "    # while ret:\n",
+    "    #     ret, frame1 = video_capture.read()\n",
+    "    barcodes = pyzbar.decode(frame)\n",
+    "    for barcode in barcodes:\n",
+    "        x, y , w, h = barcode.rect\n",
+    "        #1\n",
+    "        barcode_info = barcode.data.decode('utf-8')\n",
+    "        cv2.rectangle(frame, (x, y),(x+w, y+h), (0, 255, 0), 2)\n",
+    "        qrname = barcode_info\n",
+    "        #2\n",
+    "        font = cv2.FONT_HERSHEY_DUPLEX\n",
+    "        cv2.putText(frame, barcode_info, (x + 6, y - 6), font, 2.0, (255, 255, 255), 1)\n",
+    "        #3\n",
+    "        if qrname:\n",
+    "            print(qrname)\n",
+    "            qrname = qrname.splitlines()\n",
+    "            name = re.findall(r\":(.*)\",str(qrname[0]))\n",
+    "            name = ''.join(str(e) for e in name)\n",
+    "            #name = unknown_names[0]\n",
+    "            if name:\n",
+    "                print(name)\n",
+    "                img_name = \"{name}.jpg\".format(name=name)\n",
+    "                cv2.imwrite(str(path) + img_name, frame)\n",
+    "#                 cv2.destroyAllWindows()\n",
+    "            print(\"{} written!\".format(img_name))\n",
+    "            cv2.waitKey(5)\n",
+    "            return"
+   ]
   }
  ],
  "metadata": {
