photos deletion after 15 days

--- a/asst.ipynb
+++ b/asst.ipynb
@@ -705,6 +705,53 @@
     "            cv2.waitKey(5)\n",
     "            return"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def job():\n",
+    "    cur_direc = os.getcwd()\n",
+    "    path = os.path.join(cur_direc, 'dataset/faces/')\n",
+    "    list_of_files = [f for f in glob.glob(path+'*.jpg')]\n",
+    "    number_files = len(list_of_files)\n",
+    "\n",
+    "    names = []\n",
+    "    newnames = []\n",
+    "    images = []\n",
+    "    f_names = list_of_files.copy()\n",
+    "    for f_name in f_names:\n",
+    "        faces = f_name.split('\\\\')\n",
+    "        for name in faces:\n",
+    "            if name.endswith('.jpg'):\n",
+    "                name = name.replace('.jpg', '')\n",
+    "                newnames.append(name)\n",
+    "    names = newnames\n",
+    "    print('working')\n",
+    "    dt = date.today() - timedelta(15)\n",
+    "    dt = dt.strftime(\"%d/%m/%Y\")\n",
+    "\n",
+    "    df = pd.read_csv('Attendance.csv')\n",
+    "    namesrec = df['Name'].tolist() \n",
+    "    \n",
+    "    df.drop(df[df['EntryDate'] <= dt].index, inplace = True) \n",
+    "    df.to_csv('Attendance.csv',index=False)\n",
+    "    \n",
+    "    for name in names:\n",
+    "        if name not in namesrec:\n",
+    "            file_path = os.path.join(cur_direc, 'dataset/faces/{}.jpg'.format(name))\n",
+    "            try:\n",
+    "                os.remove(file_path)\n",
+    "            except OSError as e:\n",
+    "                print(\"Error: %s : %s\" % (file_path, e.strerror))\n",
+    "\n",
+    "# schedule.every().day.at(\"20:17\").do(job) \n",
+    "# while True:\n",
+    "#     schedule.run_pending()\n",
+    "#     time.sleep(1)"
+   ]
   }
  ],
  "metadata": {
