--- a/asst.ipynb
+++ b/asst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -50,7 +50,7 @@
     "                name = name.replace('.jpg', '')\n",
     "                newnames.append(name)\n",
     "    names = newnames\n",
-    "    print('working')\n",
+    "    #print('working')\n",
     "    dt = date.today() - timedelta(15)\n",
     "    dt = dt.strftime(\"%d/%m/%Y\")\n",
     "\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,315 +175,24 @@
     "            qrname = qrname.splitlines()\n",
     "            name = re.findall(r\":(.*)\",str(qrname[0]))\n",
     "            name = ''.join(str(e) for e in name)\n",
-    "            #name = unknown_names[0]\n",
+    "\n",
     "            if name:\n",
     "                print(name)\n",
     "                img_name = \"{name}.jpg\".format(name=name)\n",
     "                cv2.imwrite(str(path) + img_name, frame)\n",
-    "#                 cv2.destroyAllWindows()\n",
+    "                cv2.destroyAllWindows()\n",
     "            print(\"{} written!\".format(img_name))\n",
     "            cv2.waitKey(5)\n",
+    "            asst()\n",
+    "        else:\n",
     "            return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n",
-      "Please put on a mask\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def markvisitor(name):\n",
     "\n",
@@ -529,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,16 +335,16 @@
     "            \n",
     "            \n",
     "            elif label != 'Mask' and name != 'Unknown':\n",
-    "                label = 'No Mask Detectected, Entry Denied.'\n",
-    "                print('Please put on a mask')\n",
+    "                label = 'Mask not worn, Entry Denied Till mask is worn.'\n",
     "            \n",
     "            \n",
     "            elif name == \"Unknown\":\n",
+    "                label = 'Show full face for Registration'\n",
     "                print('Show full face for Registration')\n",
     "                idscanner(frame)\n",
-    "                asst()\n",
+    "\n",
     "            # include the probability in the label\n",
-    "            label = \"{}, {}: {:.2f}%\".format(name, label, max(mask, withoutMask) * 100)\n",
+    "            label = \"{}, {}\".format(name, label)\n",
     "\n",
     "            # display the label and bounding box rectangle on the output\n",
     "            # frame\n",
@@ -659,99 +368,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# import tkinter.ttk as ttk\n",
-    "# import tkinter.font as font\n",
-    "# import tkinter as tk\n",
-    "# from tkinter import Message, Text\n",
-    "\n",
-    "\n",
-    "# unknown_names = []\n",
-    "\n",
-    "# def unkownvisitor(frame):\n",
-    "#     cur_direc = os.getcwd()\n",
-    "#     path = os.path.join(cur_direc, 'dataset/faces/')\n",
-    "#     window = tk.Tk()\n",
-    "#     window.title(\"Unknown face detected\")\n",
-    "#     window.geometry(\"1300x650\")\n",
-    "#     window.minsize(400,390)\n",
-    "#     window.configure(background='white')\n",
-    "#     window.grid_rowconfigure(0, weight=1)\n",
-    "#     window.grid_columnconfigure(0, weight=1)\n",
-    "#     message = tk.Label(\n",
-    "#         window, text=\"Face-Recognition-System\",\n",
-    "#         bg=\"green\", fg=\"white\", width=50,\n",
-    "#         height=3, font=('times', 30, 'bold'))\n",
-    "\n",
-    "#     message.place(x=200, y=20)\n",
-    "\n",
-    "#     lbl2 = tk.Label(window, text=\"first Name\",\n",
-    "#                     width=20, fg=\"green\", bg=\"white\",\n",
-    "#                     height=2, font=('times', 15, ' bold '))\n",
-    "#     lbl2.place(x=400, y=200)\n",
-    "\n",
-    "#     txt2 = tk.Entry(window, width=20,\n",
-    "#                     bg=\"white\", fg=\"green\",\n",
-    "#                     font=('times', 15, ' bold '))\n",
-    "\n",
-    "#     txt2.place(x=700, y=215)\n",
-    "\n",
-    "#     lbl3 = tk.Label(window, text=\"last Name\",\n",
-    "#                     width=20, fg=\"green\", bg=\"white\",\n",
-    "#                     height=2, font=('times', 15, ' bold '))\n",
-    "#     lbl3.place(x=400, y=300)\n",
-    "\n",
-    "#     txt3 = tk.Entry(window, width=20,\n",
-    "#                     bg=\"white\", fg=\"green\",\n",
-    "#                     font=('times', 15, ' bold '))\n",
-    "\n",
-    "#     txt3.place(x=700, y=315)\n",
-    "#     #lbl2.place(x=400, y=300)\n",
-    "\n",
-    "#     #txt2.place(x=700, y=315)\n",
-    "\n",
-    "#     def close_window():\n",
-    "#         window.destroy()\n",
-    "\n",
-    "\n",
-    "#     def getname():\n",
-    "#         cur_direc = os.getcwd()\n",
-    "#         path = os.path.join(cur_direc, 'dataset/faces/')\n",
-    "\n",
-    "#         fn=txt2.get()\n",
-    "#         ln=txt3.get()\n",
-    "#         unknown_names.append(fn)\n",
-    "#         unknown_names.append(ln)\n",
-    "#         print(unknown_names)\n",
-    "#         name(unknown_names)\n",
-    "#         vname = tk.Label(window, text=fn,\n",
-    "#                     width=20, fg=\"green\", bg=\"white\",\n",
-    "#                     height=2, font=('times', 15, ' bold '))\n",
-    "#         vname.place(x=400, y=300)\n",
-    "\n",
-    "#         close_window()\n",
-    "\n",
-    "#     def name(unknown_names):\n",
-    "#         fname = unknown_names[0]\n",
-    "#         lname = unknown_names[1]\n",
-    "#         if fname and lname:\n",
-    "#             img_name = \"{fname}-{lname}.jpg\".format(fname=fname, lname=lname)\n",
-    "#             cv2.imwrite(str(path) + img_name, frame)\n",
-    "#             print(\"{} written!\".format(img_name))\n",
-    "\n",
-    "\n",
-    "#     takename = tk.Button(window, text =\"save\",  \n",
-    "#     command = getname, fg =\"white\", bg =\"green\",  \n",
-    "#     width = 20, height = 3, activebackground = \"Red\",  \n",
-    "#     font =('times', 15, ' bold ')) \n",
-    "#     unknown_names=[]\n",
-    "\n",
-    "#     takename.place(x = 600, y = 400) \n",
-    "\n",
-    "\n",
-    "\n",
-    "#     window.mainloop()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
